# fastapi-auth-base

./: .env.example  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 14c359571c08_.py  46b2ccc4cb56_.py  70faf1e4c3de_.py
app/: main.py
app/auth/: dependencies.py  router.py  schemas.py  service.py
app/core/: __init__.py  database.py  settings.py
app/users/: models.py  router.py  schemas.py  service.py
